# srts

./: .gitignore  DETAILS.md  LICENSE  Makefile  README.md  TESTING.md  TODO.md  dofilt_ES_new  fd_to_s40.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
lib/libHJVH/: Makefile
lib/libS20/: Makefile
lib/libSphFunc/: Makefile
lib/libgeo/: Makefile  dspint.f  spint.f
src/: Makefile  correlatorsph.f  depmap.f  invexpandxy.f  linegrep.c  mk3d_res.f  mk3d_res_ESEP.f  mkexpmatxy.f  pwrspecsph.f  raw2xyz-eqdist.f  raw2xyz_jr.f  sph2v_input.f  sphadd.f  sphexp.f  spt2sph.f
src/srts/: __init__.py  filtering.py  io.py  parameterization.py  splines.py  tomographic_filter.py
srts/: .gitignore  analysis.py  coeffs.py  expansion.py  model_data.py
srts/.github/workflows/: tests.yml
srts/src/srts/: __init__.py  coeffs.py  expansion.py  pipeline.py
srts/tests/: test_coeffs.py  test_splines.py
tests/: conftest.py  test_analysis.py  test_expansion.py  test_filtering.py  test_fortran_validation.py  test_io.py  test_model_data.py  test_parameterization.py  test_pipeline.py  test_tomographic_filter.py
tools/: convert_to_hdf5.py  upload_test_data.sh
