[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srts"
dynamic = ["version"]
description = "Tomographic filtering following Ritsema et al. (2007)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Jeroen Ritsema", email = "jritsema@umich.edu" },
    { name = "Paula Koelemeijer", email = "pjkoelemeijer@cantab.net" },
    { name = "Sia Ghelichkhani", email = "s.ghelichkhani@gmail.com" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyshtools>=4.10",
    "h5py>=3.8",
]

[project.urls]
Homepage = "https://github.com/g-adopt/srts"
Repository = "https://github.com/g-adopt/srts"
Issues = "https://github.com/g-adopt/srts/issues"

[project.optional-dependencies]
viz = ["matplotlib", "cartopy"]
test = ["pytest>=7.0", "pyshtools>=4.10"]
dev = ["pytest>=7.0", "mypy"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
srts = ["data/*.h5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
